--- a/PandaManager/Info.plist
+++ b/PandaManager/Info.plist
@@ -22,12 +22,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSCameraUsageDescription</key>
-	<string>app需要您的同意才能使用相机</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>app需要您的同意才能访问相册</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>app需要您的同意才能访问相册</string>
+    <key>NSCameraUsageDescription</key>
+    <string>上传照片信息时需要使用您的相机</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>上传照片信息时需要访问您的相册</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>上传照片信息时需要访问您的相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
